# ChangeLog for net-p2p/nicotine
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/nicotine/ChangeLog,v 1.5 2003/11/07 03:33:01 tseng Exp $

*nicotine-1.0.5 (06 Nov 2003)

  06 Nov 2003; Brandon Hale <tseng@gentoo.org> nicotine-1.0.5.ebuild:
  Version bump with important server fix

  01 Nov 2003; Jason Wever <weeve@gentoo.org> nicotine-1.0.4.1.ebuild,
  nicotine-1.0.4.ebuild:
  Added ~sparc keyword.

  25 Oct 2003; Brandon Hale <tseng@gentoo.org> metadata.xml:
  I'm taking over this package from liquidx, changing metadata to reflect this.

*nicotine-1.0.4.1 (24 Oct 2003)

  24 Oct 2003; Brandon Hale <tseng@gentoo.org> nicotine-1.0.4.1.ebuild:
  version bump by popular request

*nicotine-1.0.4 (20 Sep 2003)

  20 Sep 2003; Alastair Tse <liquidx@gentoo.org> metadata.xml,
  nicotine-1.0.4.ebuild:
  initial ebuild. the new port of the soulseek p2p network client in python and
  gtk
