@@ -1,0 +1,1 @@
+MD5 af811a21a7381956c6fdfcba652f8a5d nicotine-1.0.6rc1.tar.bz2 270403
